force-app/main/default/objects/Slack_Event_Log__c/Slack_Event_Log__c.object-meta.xml
<CustomObject>
    <description>Idempotency log for incoming Slack events.</description>
    <label>Slack Event Log</label>
    <nameField>
        <label>Slack Event Log Name</label>
        <displayFormat>{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>