force-app/main/default/objects/Slack_Event_Log__c/fields/Payload_Hash__c.field-meta.xml
<CustomField>
    <fullName>Payload_Hash__c</fullName>
    <label>Payload Hash</label>
    <type>Text</type>
    <length>128</length>
    <length>128</length>
</CustomField>