force-app/main/default/objects/Slack_Event_Log__c/fields/Received_At__c.field-meta.xml
<CustomField>
    <fullName>Received_At__c</fullName>
    <label>Received At</label>
    <type>DateTime</type>
</CustomField>