force-app/main/default/objects/Slack_Event_Log__c/fields/Slack_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Event_Id__c</fullName>
    <label>Slack Event Id</label>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
    <length>120</length>
</CustomField>